<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/bt_string_request"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/string_request" />

    <Button
        android:id="@+id/bt_json_request"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/json_request" />

    <Button
        android:id="@+id/bt_image_request"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/image_request" />

    <Button
        android:id="@+id/bt_image_loader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/image_loader" />

    <Button
        android:id="@+id/bt_network_imageview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/network_imageview" />

    <Button
        android:id="@+id/bt_xml_request"
        android:layout_width="match_parent"
        android:text="@string/xml_request"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/bt_gson_request"
        android:layout_width="match_parent"
        android:text="@string/gson_request"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/bt_params_request"
        android:layout_width="match_parent"
        android:text="@string/params_request"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/bt_check_update"
        android:layout_width="match_parent"
        android:text="@string/check_update"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/bt_request_clear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/result_clear" />


</LinearLayout>
